# llm-agent-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentic/: .gitignore  __init__.py  cli.py  context.py  function.py  meta_function.py  runtime.py
agentic/apps/: mini_lesson.py
agentic/functions/: __init__.py  _utils.py  add_numbers.py  agent_loop.py  broken.py  build_catalog.py  conclusion.py  deep_work.py  divide.py  evil.py  failing.py  general_action.py  generated.py  init_research.py  list_files.py  llm_call_example.py  my_custom_fn.py  my_fixed.py  my_fixed_fn.py  original.py  parse_action.py  prepare_args.py  process.py  sentiment.py  summarize.py  test_framework.py  wait.py  word_count.py
agentic/meta_functions/: __init__.py  _helpers.py  create.md  create.py  create_app.py  create_skill.py  fix.py  improve.py
agentic/providers/: __init__.py  anthropic.py  claude_code.py  codex.py  gemini.py  gemini_cli.py  openai.py
agentic/visualize/: __init__.py  __main__.py  programs_meta.json  server.py
cli/: package-lock.json  package.json  tsconfig.json
cli/scripts/: probe-stats.ts  probe.ts
cli/src/: index.tsx
cli/tests/: bottomBar.test.tsx
docs/: API.md  CONTEXT-v3.md  DESIGN.md  GETTING_STARTED.md  INTEGRATION_CLAUDE_CODE.md  INTEGRATION_OPENCLAW.md  README_CN.md
docs/api/: agentic_function.md  context.md  meta.md  meta_function.md  providers.md  runtime.md
docs/archive/: DESIGN.md  REVIEW-v3.md  REVIEW-v4.md
docs/context/: 07-path-addressing.mmd  PRACTICE.md  README.md
docs/design/: cli-naming.md  contextgit.md  error-retry.md  function-calling-unification.md  multi-exec.md  next-step-decision.md  tool-calling.md
docs/philosophy/: agentic-programming.md
examples/: meta_chain.py  meta_demo.py  quickstart.py
harness/: __init__.py
harness/function/: __init__.py
harness/programmer/: __init__.py
harness/runtime/: __init__.py
harness/scope/: __init__.py
harness/session/: __init__.py
openprogram/: __init__.py  __main__.py  cli.py  cli_chat.py  cli_ink.py  cli_tui.py  setup.py  setup_wizard.py
openprogram/_cli_chat/: banner.py  turn.py
openprogram/_cli_cmds/: browser.py  chat.py  cron.py  programs.py
openprogram/_setup_sections/: sections.py
openprogram/agent/: agent_loop.py  dispatcher.py  session_config.py
openprogram/agentic_programming/: __init__.py  context.py  decision.py  events.py  function.py  persistence.py  runtime.py  session.py  skills.py
openprogram/agents/: context_engine.py
openprogram/auth/: aliases.py  cli.py  manager.py  profiles.py  resolver.py  wizard.py
openprogram/backend/: __init__.py  base.py  docker.py  local.py  ssh.py
openprogram/channels/: __init__.py  _conversation.py  _lock.py  base.py  bindings.py  daemon.py  outbound.py  runner.py  setup.py  telegram.py  wechat.py  worker.py
openprogram/context/: README.md  active.py  aging.py  engine.py  nodes.py  render.py  session_db.py  storage.py
openprogram/contextgit/: __init__.py  dag.py
openprogram/functions/: __init__.py  _helpers.py  _registry.py  _runtime.py
openprogram/legacy_providers/: __init__.py
openprogram/memory/: short_term.py  wiki.py
openprogram/providers/: __init__.py  claude_code.py  codex.py  configuration.py  openai_codex.py  register.py  registry.py  thinking_catalog.py
openprogram/tools/: __init__.py  _providers.py
openprogram/webui/: _auth_routes.py  _chat_routes.py  _exec_dag.py  _functions.py  _model_catalog.py  _runtime_mgmt.py  _thinking.py  messages.py  persistence.py  server.py
openprogram/worker/: web.py
references/pi-ai/: README.md
scripts/: verify_claude_max_e2e.py  verify_gemini_cli_e2e.py
skills/agentic-program/: SKILL.md
skills/agentic-programming/: SKILL.md
skills/create-app/: SKILL.md
skills/create-function/: SKILL.md
skills/deep-work/: SKILL.md
skills/fix-function/: SKILL.md
skills/list-files/: SKILL.md
skills/meta-function/: SKILL.md
skills/run-function/: SKILL.md
skills/sentiment/: SKILL.md
skills/test/: SKILL.md
tests/: _edit_test_helpers.py  _fix_test_helpers.py  conftest.py  test_async.py  test_chain.py  test_context.py  test_context_roundtrip.py  test_dispatch_helpers.py  test_error_recovery.py  test_function.py  test_integration.py  test_meta.py  test_provider_anthropic.py  test_provider_cli.py  test_provider_detection.py  test_provider_functions.py  test_provider_gemini.py  test_provider_openai.py  test_providers.py  test_recovery.py  test_runtime.py  test_scope_session.py
tests/agentic_programming/: test_ask_user_dag.py  test_compute_reads.py  test_decision.py  test_function_dag_exit_node.py  test_runtime_exec_dag.py  test_runtime_exec_dag_prompt.py
tests/context/: test_active.py
tests/core/: test_async.py  test_context.py  test_context_roundtrip.py  test_function.py  test_render.py  test_runtime.py
tests/integration/: test_attach_lazy_session.py  test_error_recovery.py  test_integration.py  test_persistence.py  test_public_api.py  test_recovery.py  test_test_framework.py
tests/meta_functions/: test_follow_up.py  test_meta.py
tests/providers/: test_anthropic.py  test_claude_code.py  test_cli.py  test_functions.py  test_gemini.py  test_openai.py
tests/unit/: test_auth_cli.py  test_auth_methods.py  test_auth_profiles.py  test_auth_resolver_and_adapters.py  test_auth_routes.py  test_browser_tool.py  test_channels_dispatch_inbound.py  test_claude_code_runtime.py  test_cli_runner.py  test_cli_runtime_imports.py  test_contextgit_dag.py  test_cron_command.py  test_dispatcher_integration.py  test_dispatcher_tools.py  test_memory_tool.py  test_message_store_load_all.py  test_resolve_model.py  test_session_config.py  test_session_db.py  test_session_db_concurrency.py  test_todo_tool.py  test_tools_runtime.py  test_webui_chat_dispatcher.py  test_webui_messages_cache.py
web/: MIGRATION.md  package-lock.json  package.json  tailwind.config.ts
web/app/: styles.css
web/components/: app-shell.tsx  page-shell.tsx
web/lib/: api.ts  chat-stream.ts  conv-store.ts  conversations.ts  (+10 more)
(+347 files in other folders)
