[build-system]
requires = ["setuptools>=68,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openprogram"
version = "0.4.0"
description = "OpenProgram — Agentic Programming as a product: write Python functions that call LLMs with automatic context tracking."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fzkuji"},
]
keywords = ["llm", "agentic", "agentic-programming", "ai", "function", "decorator", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
openai = [
    "openai>=1.30.0",
]
gemini = [
    "google-genai>=1.0.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
# Back-compat alias
visualize = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
# GUI-Agent-Harness deps (vision + input control).
# Note: ultralytics pulls in torch (~2GB); opencv-python-headless avoids the
# system libGL runtime. Add `easyocr` yourself if you need OCR on non-macOS.
gui = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "ultralytics>=8.3.0",
    "requests>=2.31.0",
]
all = [
    # LLM providers
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    # Web UI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    # GUI harness
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "ultralytics>=8.3.0",
    "requests>=2.31.0",
]

[project.scripts]
openprogram = "openprogram.cli:main"

[project.urls]
Homepage = "https://github.com/Fzkuji/OpenProgram"
Repository = "https://github.com/Fzkuji/OpenProgram"
Documentation = "https://github.com/Fzkuji/OpenProgram/tree/main/docs"

[tool.setuptools.packages.find]
include = ["openprogram*"]
exclude = [
    "openprogram.programs.applications.GUI-Agent-Harness*",
    "openprogram.programs.applications.Research-Agent-Harness*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: real-subprocess integration tests (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"
